--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,32 +1,24 @@
-<div layout="column" md-theme="{{vm.themePrimary}}">
+<div layout="column" layout-align="start center" md-theme="{{vm.themePrimary}}">
 
     <md-toolbar class="widget-toolbar md-whiteframe-z1">
-
     </md-toolbar>
 
-    <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" >Scheduler</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')">Sensor Graphs</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-list')">Sensor list</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
+    <div style="margin-top: 16px; text-align: center">
+        <navigation-pie svg-title="Scheduler" data="vm.schedulerNavData" width="280" height="280"></navigation-pie>
+        <navigation-pie svg-title="Receptors" data="vm.receptorNavData" width="280" height="280"></navigation-pie>
+        <navigation-pie svg-title="Sensors" data="vm.sensorsNavData" width="280" height="280"></navigation-pie>
+        <navigation-pie svg-title="Health & Alarms" data="vm.topNavData" width="280" height="280"></navigation-pie>
+        <navigation-pie svg-title="Controls & Info" data="vm.controlsNavData" width="280" height="280"></navigation-pie>
+        <navigation-pie svg-title="System & User Logs" data="vm.logsNavData" width="280" height="280"></navigation-pie>
     </div>
+
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('process-control')">Process Control</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('cam-components')">CAM Components</md-button>
-    </div>
-    <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('customHealth')">Custom Health</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorHealth')">Receptor Health</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorPointing')">Receptor Pointing</md-button>
-    </div>
-    <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('video')">Video</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('instrumental-config')">Instrumental Configuration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.openCentralLogger()">Central Logger</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')">KATGUI Configuration</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('about')">About KATGUI</md-button>
     </div>
+
+    <div class="navigation-tooltip" style="display: none; background-color: #ffffff"></div>
 </div>
