--- a/app/config/config.html
+++ b/app/config/config.html
@@ -62,7 +62,7 @@
                 </div>
                 <div layout="row" layout-align="start center" style="width: 400px; height: 42px">
                     <label style="text-align: end; width: 155px; font-weight: normal">Sensor Strategy Interval:</label>
-                    <md-input-container md-no-float style="margin-left: 16px;text-align: start; padding: 0px;"
+                    <md-input-container md-no-float style="margin-left: 16px;text-align: start; padding: 0;"
                                         class="md-primary"
                                         title="Between 1 and 10000 seconds">
                         <input style="width: 80px;" placeholder="Seconds" ng-model="$root.sensorListStrategyInterval"
@@ -78,7 +78,7 @@
                 <md-subheader>Loggers</md-subheader>
                 <div layout="row" layout-align="start center" style="width: 400px; height: 42px">
                     <label style="text-align: end; width: 155px; font-weight: normal"> Tail :</label>
-                    <md-input-container md-no-float style="margin-left: 16px;text-align: start; padding: 0px;"
+                    <md-input-container md-no-float style="margin-left: 16px;text-align: start; padding: 0;"
                                         class="md-primary"
                                         title="Between 10 and 500 lines">
                         <input style="width: 80px;" placeholder="loglines" ng-model="$root.logNumberOfLines"
