--- a/app/health/receptor-health/receptor-health.html
+++ b/app/health/receptor-health/receptor-health.html
@@ -35,7 +35,7 @@
                         <div layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-right: 8px; margin-bottom: 8px; padding: 0">
                             <label style="width: 82px; font-weight: normal; margin-top: 4px;">Chart Width:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Chart Width for each Tree View">
                                 <input flex style="" placeholder="Minimum" ng-model="vm.treeChartSize.width"
                                        ng-change="vm.chartSizeChanged()" type="number"
@@ -47,7 +47,7 @@
                         <div layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-right: 8px; margin-bottom: 8px; padding: 0">
                             <label style="width: 82px; font-weight: normal; margin-top: 4px;">Chart Height:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Chart Height for each Tree View">
                                 <input flex style="" placeholder="Minimum" ng-model="vm.treeChartSize.height"
                                        ng-change="vm.chartSizeChanged()" type="number"
