--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -8,7 +8,7 @@
             <span flex style="margin-left: 16px;" ng-show="vm.sortBySubarrays">Receptors by Subarray</span>
             <md-menu md-theme="{{themePrimaryButtons}}">
                 <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
-                           style="margin-left: 0px; margin-right: 8px;">
+                           style="margin-left: 0; margin-right: 8px;">
                     <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;">
