--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div layout="row" style="position: absolute; max-height: calc(100% - 8px); min-height: calc(100% - 8px); max-width: 385px; min-width: 385px; padding-right: 8px; padding-bottom: 8px; right: 0px;" class="md-whitespace-z1">
+    <div layout="row" style="position: absolute; max-height: calc(100% - 8px); min-height: calc(100% - 8px); max-width: 385px; min-width: 385px; padding-right: 8px; padding-bottom: 8px; right: 0;" class="md-whitespace-z1">
         <div class="md-whiteframe-z2" layout="column" flex>
             <md-toolbar class="panel-toolbar-small md-whiteframe-z1" ng-mouseenter="showDraftTools = true;" ng-mouseleave="showDraftTools = false;">
                 <div layout="row" class="unselectable md-toolbar-tools">
