--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -4,7 +4,7 @@
             <span style="margin-top: -10px" flex>Sensor Values</span>
             <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="font-size: 14px">
                 <span style="margin-right: 8px;">Historic values at a</span>
-                <md-input-container md-no-float style="margin-left: 8px; padding: 0px; width: 40px"
+                <md-input-container md-no-float style="margin-left: 8px; padding: 0; width: 40px"
                                     class="" title="Data Interval Grouping">
                     <input flex style="color: inherit;" placeholder="Interval" ng-model="vm.sensorGroupingInterval" type="number"
                            ng-model-options="{ debounce: 750 }" ng-change="vm.historicalRangeChanged()" min="0" max="1800">
@@ -65,7 +65,7 @@
             <span style="font-size: 14px;">Wind Speed Limit: {{vm.windSpeedLimitLine}}m.s. - Wind Gust Limit: {{vm.windGustLimitLine}}m.s.</span>
             <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0">
                 <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
-                           style="margin-left: 0px; margin-right: 8px;">
+                           style="margin-left: 0; margin-right: 8px;">
                     <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;">
@@ -91,7 +91,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
                                 <input flex style="" placeholder="Minimum" ng-model="vm.yAxisWindMinValue"
                                        ng-change="vm.showWindOptionsChanged()" type="number"
@@ -103,7 +103,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
                                 <input flex style="" placeholder="Maximum" ng-model="vm.yAxisWindMaxValue"
                                        ng-change="vm.showWindOptionsChanged()" type="number"
@@ -122,7 +122,7 @@
             <span flex ng-click="vm.hideWeatherChart = !vm.hideWeatherChart">Pressure, Humidity and Temperature</span>
             <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0">
                 <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
-                           style="margin-left: 0px; margin-right: 8px;">
+                           style="margin-left: 0; margin-right: 8px;">
                     <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;">
@@ -148,7 +148,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Right Y-Axis Minimum Value">
                                 <input flex style="" placeholder="Minimum" ng-model="vm.yAxisRightMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
@@ -160,7 +160,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Right Y-Axis Maximum Value">
                                 <input flex style="" placeholder="Maximum" ng-model="vm.yAxisRightMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
@@ -178,7 +178,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
                                 <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
@@ -190,7 +190,7 @@
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
                              style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
                             <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
                                 <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
