--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <!--dont use md-whiteframe class because it leaves black artifacts on sidenav-->
 <md-content layout="row" layout-fill>
-    <md-sidenav md-theme="{{themeSecondary}}" ng-if="loggedIn" class="md-sidenav-left" md-component-id="left-sidenav" layout="column" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
+    <md-sidenav md-theme="{{themeSecondary}}" ng-if="loggedIn" class="md-sidenav-left" md-component-id="left-sidenav" layout="column" style="box-shadow: 0 8px 17px 1px rgba(0, 0, 0, 0.2);">
         <md-toolbar class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">katGUI</h1>
         </md-toolbar>
@@ -262,7 +262,7 @@
         </md-content>
     </md-sidenav>
 
-    <md-sidenav md-theme="{{themeSecondary}}" ng-if="loggedIn" class="md-sidenav-right" md-component-id="right-sidenav" layout="column" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
+    <md-sidenav md-theme="{{themeSecondary}}" ng-if="loggedIn" class="md-sidenav-right" md-component-id="right-sidenav" layout="column" style="box-shadow: 0 8px 17px 1px rgba(0, 0, 0, 0.2);">
         <md-toolbar class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">User Navigation</h1>
         </md-toolbar>
