--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -7,7 +7,7 @@
         </md-button>
         <md-menu-content width="4" style="padding-left: 16px;" ng-click="$event.stopPropagation()">
             <md-menu-item>
-                <md-checkbox class="md-primary" ng-model="vm.useEquatorial" ng-init="vm.useEquatorial = true"
+                <md-checkbox class="md-primary" ng-model="vm.useEquatorial" ng-init="vm.useEquatorial = true" ng-change="vm.redraw(true)"
                     ng-click="$event.stopPropagation()" md-menu-align-target>
                     <span>Use Equatorial Coordinates</span>
                 </md-checkbox>
